fixed duplicity problem

--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -1,4 +1,5 @@
 {
 	"title": "Demo de traducción",
-	"my title": "Demo de traducción"
+	"my title": "Demo de traducción",
+	"another title": "Otro título"
 }
