added hover and alt

--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -1,5 +1,6 @@
 {
 	"title": "Demo de traducción",
 	"my title": "Demo de traducción",
-	"another title": "Otro título"
+	"another title": "Otro título",
+	"Works on title": "va con el título y el alt"
 }
