added case with name (needs to use <span></span>)

--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -2,5 +2,7 @@
 	"title": "Demo de traducción",
 	"my title": "Demo de traducción",
 	"another title": "Otro título",
-	"Works on title": "va con el título y el alt"
+	"Works on title": "va con el título y el alt",
+	"I am": "Soy",
+	"and I work in": "y trabajo en"
 }
