correct date localization

--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -6,5 +6,6 @@
 	"I am": "Soy",
 	"and I work in": "y trabajo en",
 	"I was born in": "Nací el",
+	"Hi, {{name}}": "Hola, {{name}}",
 	"nacimiento": "{{- date, DD-MM-YYYY}}"
 }
