--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -7,5 +7,5 @@
 	"and I work in": "y trabajo en",
 	"I was born in": "Nací el",
 	"Hi, {{name}}": "Hola, {{name}}",
-	"nacimiento": "{{- date, llll}}"
+	"nacimiento": "{{- date, lll}}"
 }
