--- a/public/assets/i18n/vi.json
+++ b/public/assets/i18n/vi.json
@@ -7,5 +7,7 @@
 	"and I work in": "và tôi làm việc tại",
 	"I was born in": "Tôi sinh ra",
 	"Hi, {{name}}": "Xin chào, {{name}}",
-	"nacimiento": "{{- date, lll}}"
+	"nacimiento": "{{- date, lll}}",
+	"localized": "nội địa hóa",
+	"not localized": "không nội địa hóa"
 }
